--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "eslint": "^8",
